--- a/src/components/App/styles.module.css
+++ b/src/components/App/styles.module.css
@@ -42,7 +42,7 @@
 .content form {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
   padding: 1rem;
 }
 
@@ -88,6 +88,16 @@
   gap: 10px;
   display: flex;
   align-items: center;
+}
+
+input[type='checkbox'] + label {
+  cursor: pointer;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .circles {
