Added onclick closing functionality and fixed flex styling of toasts

--- a/src/components/ToastPortal/styles.module.css
+++ b/src/components/ToastPortal/styles.module.css
@@ -1,8 +1,11 @@
 .toasters {
-  display: flex;
+  display: inline-flex;
+  flex-wrap: wrap;
+  max-width: 200px;
   gap: 10px;
   flex-direction: column;
   position: fixed;
   top: 20px;
   right: 20px;
+  align-items: flex-end;
 }
